--- a/index.html
+++ b/index.html
@@ -208,6 +208,9 @@
 								<li><a rel="nofollow" href="https://translate.google.cn/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #0084ff;"></i>谷歌翻译</a>
 								</li>
+								<li><a rel="nofollow" href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank"><i
+											class="iconfont icon-theater-masks" style="color: #0084ff;"></i>Chrome</a>
+								</li>
 								<li><a href="https://www.67tool.com/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #00f963;"></i>即时工具</a>
 								</li>
@@ -216,26 +219,26 @@
 								</li>
 								<li>
 									<a rel="nofollow" href="https://mm.edrawsoft.cn/app/create" target="_blank">
-									<i class="iconfont icon-theater-masks" style="color: #f737ce;"></i>亿图脑图</a>
+										<i class="iconfont icon-theater-masks" style="color: #f737ce;"></i>亿图脑图</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://huatu.98youxi.com/markdown/" target="_blank">
-									<i class="iconfont icon-theater-masks" style="color: #ff2600;"></i>Markdown</a>
+										<i class="iconfont icon-theater-masks" style="color: #ff2600;"></i>Markdown</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://huatu.98youxi.com/" target="_blank">
-									<i class="iconfont icon-theater-masks" style="color: #fdb90d;"></i>迅捷脑图</a>
+										<i class="iconfont icon-theater-masks" style="color: #fdb90d;"></i>迅捷脑图</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://store.lizhi.io/" target="_blank">
-									<i class="iconfont icon-theater-masks" style="color: #ffff07;"></i>正版软件</a>
+										<i class="iconfont icon-theater-masks" style="color: #ffff07;"></i>正版软件</a>
 								</li>
 
 								<li>
 									<a rel="nofollow" href="https://www.cleverpdf.com/cn" target="_blank">
-									<i class="iconfont icon-theater-masks" style="color: #dfe64c;"></i>CleverPDF</a>
+										<i class="iconfont icon-theater-masks" style="color: #dfe64c;"></i>CleverPDF</a>
 								</li>
-								
+
 								<li><a rel="nofollow" href="http://www.koovin.com/" target="_blank"><i
 											class="iconfont icon-theater-masks" style="color: #ff9020;"></i>库问搜索</a>
 								</li>
@@ -281,8 +284,28 @@
 											class="iconfont icon-theater-masks" style="color: #c518f4;"></i>图像自动化</a>
 								</li>
 								<li><a rel="nofollow" href="http://www.51nwt.com/" target="_blank"><i
-											class="iconfont icon-theater-masks" style="color: #3af406;"></i>内网通训</a>
+											class="iconfont icon-theater-masks" style="color: #3af406;"></i>内网通讯</a>
 								</li>
+								<!------>
+
+								<li class="title"><i class="iconfont icon-msg"></i>Information</li>
+								<li><a href="https://www.gsxt.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>企业信息</a></li>
+								<li><a rel="nofollow" href="https://wenshu.court.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>裁判文书</a></li>
+								<li><a rel="nofollow" href="http://zxgk.court.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>执行信息</a></li>
+								<li><a rel="nofollow" href="https://privacy.aiuys.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>Privacy</a>
+								</li>
+								<li><a rel="nofollow" href="https://www.linuxcool.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>Linux命令</a>
+								</li>
+								<li><a rel="nofollow" href="https://dm.airdisk.cc/download/c-3/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>Airdisk</a>
+								</li>
+
+
 								<!------>
 
 								<li class="title"><i class="iconfont icon-msg"></i>SNS</li>
@@ -405,7 +428,7 @@
 								<li class="title"><i class="iconfont icon-kongzhitai"></i>Dev</li>
 								<li><a rel="nofollow" href="http://www.w3school.com.cn/" target="_blank"><i
 											class="iconfont icon-h5" style="color:#c03;"></i>W3school</a></li>
-								<li><a rel="nofollow" href="https://github.com/" target="_blank"><i
+								<li><a rel="nofollow" href="https://loseprivacy.cc/" target="_blank"><i
 											class="iconfont icon-github"></i>Github</a></li>
 								<li><a rel="nofollow" href="https://codepen.io/" target="_blank"><i
 											class="iconfont icon-codepen"></i>Codepen</a></li>
@@ -775,49 +798,5 @@
 				<script src="static/js/defocus.js"></script>
 				<script async src="static/js/defocus.js"></script>
 			</div>
-			<!-- <div style="visibility:hidden;">
-				<a href="https://radio.dragon-fly.club/">radio669</a>
-				<a href="https://music.dragon-fly.club/">music669</a>
-				<a href="https://mast.dragon-fly.club/">island</a>
-				<a href="https://mast.dragon-fly.club/@holgerhuo">snsh</a>
-				<a href="https://mast.dragon-fly.club/@holgerhuo.rss">snshi</a>
-				<a href="https://mast.dragon-fly.club/@martincao">snsm</a>
-				<a href="https://mast.dragon-fly.club/@martincao.rss">snsmi</a>
-				<a href="https://mast.dragon-fly.club/@how">snsh</a>
-				<a href="https://mast.dragon-fly.club/@how.rss">snshi</a>
-				<a href="https://mast.dragon-fly.club/@psych_fb">snsp</a>
-				<a href="https://mast.dragon-fly.club/@psych_fb.rss">snspi</a>
-				<a href="https://mast.dragon-fly.club/@DeBruyneKev">snsh</a>
-				<a href="https://mast.dragon-fly.club/@yh">snsh</a>
-				<a href="https://mast.dragon-fly.club/@trends">snsh</a>
-				<a href="https://mast.dragon-fly.club/@lin">snsh</a>
-				<a href="https://mast.dragon-fly.club/@Avery">snsh</a>
-				<a href="https://mast.dragon-fly.club/@islandstats">snsh</a>
-				<a href="https://mast.dragon-fly.club/@DeBruyneKev.rss">snshi</a>
-				<a href="https://i.holger.net.cn/">ms</a>
-				<a href="https://blog.holger.net.cn/">blog</a>
-				<a href="https://blog.holger.net.cn/sitemap.xml">holger's blog</a>
-				<a href="https://blog.mast.dragon-fly.club/index.xml">island blog</a>
-				<a href="https://minecraft.dragon-fly.club/">rminecraft669</a>
-				<a href="https://music.dragon-fly.club/">music669</a>
-				<a href="https://radio.dragon-fly.club/">radio669</a>
-				<a href="https://mast.dragon-fly.club/">sns</a>
-				<a href="https://mast.dragon-fly.club/@holgerhuo">snsh</a>
-				<a href="https://mast.dragon-fly.club/@holgerhuo.rss">snshi</a>
-				<a href="https://mast.dragon-fly.club/@martincao">snsm</a>
-				<a href="https://mast.dragon-fly.club/@martincao.rss">snsmi</a>
-				<a href="https://mast.dragon-fly.club/@how">snsh</a>
-				<a href="https://mast.dragon-fly.club/@how.rss">snshi</a>
-				<a href="https://mast.dragon-fly.club/@psych_fb">snsp</a>
-				<a href="https://mast.dragon-fly.club/@psych_fb.rss">snspi</a>
-				<a href="https://mast.dragon-fly.club/@DeBruyneKev">snsh</a>
-				<a href="https://mast.dragon-fly.club/@DeBruyneKev.rss">snshi</a>
-				<a href="https://i.holger.net.cn/">ms</a>
-				<a href="https://blog.holger.net.cn/">blog</a>
-				<a href="https://blog.holger.net.cn/sitemap.xml">blogi</a>
-			</div>
-		</div> -->
-			<!--搜索框和书签 end-->
-
 	</body>
 </html>
