--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
 		<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@500&display=swap" rel="stylesheet">
 		<!--引用Google Fonts Josefin Sans-->
 		<link rel="manifest" href="static/manifest.json">
+		<!-- <script src='https://demo443.com/css_js/xuehua.js'></script> -->
+		<!-- <script src='./css_js/denglong.js'></script> -->
+		<!-- <script src='https://demo443.com/css_js/bolang.js'></script> -->
 		<style>
 			#time_new {
 				position: relative;
@@ -228,15 +231,31 @@
 										<i class="iconfont icon-theater-masks" style="color: #f1e900;"></i>七牛云</a>
 								</li>
 								<li>
-									<a rel="nofollow" href="https://console.leancloud.cn/" target="_blank">
-										<i class="iconfont icon-theater-masks" style="color: #17f1ea;"></i>LeanCloud</a>
+									<a rel="nofollow" href="http://ftp.8u.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #17f1ea;"></i>8uftp</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://putty.org/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #8af135;"></i>PuTTY</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.qweather.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #8af135;"></i>和风天气</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://map.qweather.com" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #8af135;"></i>气象图</a>
 								</li>
 								
 								<!------>
 								<li class="title"><i class="iconfont icon-msg"></i>Shortcut Tool</li>
 								<li>
-									<a rel="nofollow" href="https://translate.google.cn/" target="_blank">
+									<a rel="nofollow" href="https://translate.google.com.hk/" target="_blank">
 										<i class="iconfont icon-theater-masks" style="color: #0084ff;"></i>谷歌翻译</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://fanyi.youdao.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #0084ff;"></i>有道翻译</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://www.google.cn/intl/zh-CN/chrome/" target="_blank">
@@ -319,6 +338,34 @@
 								<li>
 									<a rel="nofollow" href="http://zxgk.court.gov.cn/" target="_blank">
 										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>执行信息</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://cont.12315.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>合同示范</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="http://bzdt.ch.mnr.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>标准地图</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://le.ouchn.cn/home" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>终身教育</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="http://www.docuchina.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>中国纪录片</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="http://www.stats.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>国家统计局</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://yhssglxt.miit.gov.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>工信部申诉</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="http://www.nlc.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #e6162d;"></i>数字图书部</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://privacy.aiuys.com/" target="_blank">
@@ -1028,13 +1075,13 @@
 								</a>
 							</li>
 							<li class="quick" data-s="Music" target="_blank" title="Music">
-								<a target=_blank rel="nofollow" href="http://demo443.com/music/">
+								<a target=_blank rel="nofollow" href="./music/">
 									<i style="background-image: url(./static/icon/music.png);"></i>
 									Music
 								</a>
 							</li>
 							<li class="quick" data-s="Tool" target="_blank" title="Tool">
-								<a rel="nofollow" href="http://demo443.com/tool/">
+								<a rel="nofollow" href="./tool/">
 									<i style="background-image: url(./static/icon/home.png);"></i>
 									Tool
 								</a>
@@ -1087,14 +1134,16 @@
 			</div>
 			<div class="foot">
 				Copyright © 2022 ☕杨晓东_个人导航 All Rights Reserved. designed and developed by yangkaiqun.
-
 				<p>
 					<pss><a href='http://i.holger.net.cn' target='_blank'> </a>&nbsp;&nbsp;<ping></ping>
 					</pss>
+					<!-- <span id="busuanzi_container_site_pv">本站总访问量: <span id="busuanzi_value_site_pv"></span> 次</span> -->
 				</p>
 				<script async src="static/js/latency.js"></script>
 				<script src="static/js/defocus.js"></script>
 				<script async src="static/js/defocus.js"></script>
 			</div>
+			<!-- <script async src="./css_js/number.js"></script> -->
+			
 	</body>
 </html>
