--- a/index.html
+++ b/index.html
@@ -405,12 +405,20 @@
 								<li class="title"><i class="iconfont icon-msg"></i>Software</li>
 							
 								<li>
-									<a rel="nofollow" href="https://www.chromedownloads.net/" target="_blank">
-										<i class="iconfont icon-theater-masks" style="color: #03ff13;"></i>谷歌浏览器</a>
+									<a rel="nofollow" href="https://www.google.cn/intl/zh-CN/chrome/dev/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #03ff13;"></i>谷歌-DEV</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://www.todesk.com/download.html" target="_blank">
 										<i class="iconfont icon-theater-masks" style="color: #3af406;"></i>远程协助</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.diskgenius.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #3af406;"></i>数据恢复</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.charlesproxy.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #3af406;"></i>Charles</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="http://www.51nwt.com/" target="_blank">
@@ -761,6 +769,10 @@
 								<li>
 									<a rel="nofollow" href="https://go.bananapro.club/" target="_blank">
 										<i class="iconfont icon-theater-masks"></i>banana</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.zzzmode.com/mytools/charles/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>Charles-P</a>
 								</li>
 								<li>
 									<a rel="nofollow" href="https://codepen.io/" target="_blank">
