--- a/index.html
+++ b/index.html
@@ -1149,13 +1149,14 @@
 				<p>
 					<pss><a href='http://i.holger.net.cn' target='_blank'> </a>&nbsp;&nbsp;<ping></ping>
 					</pss>
-					<!-- <span id="busuanzi_container_site_pv">本站总访问量: <span id="busuanzi_value_site_pv"></span> 次</span> -->
+					<span id="busuanzi_container_site_pv">本站总访问量: <span id="busuanzi_value_site_pv"></span> 次</span>
 				</p>
 				<script async src="static/js/latency.js"></script>
 				<script src="static/js/defocus.js"></script>
 				<script async src="static/js/defocus.js"></script>
 			</div>
 			<!-- <script async src="./css_js/number.js"></script> -->
+			<script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
 			
 	</body>
 </html>
