--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<meta charset="UTF-8">
 		<meta name="copyright" content="©️ 2022 Victor GPLv3.0">
 		<meta name="author" content="Victor">
+		<!-- <meta http-equiv="refresh" content="120;url=#">	 -->
 		<title>杨晓东_个人导航</title>
 		<meta name="keywords"
 			content="编程,学习,导航,个人导航,杨晓东,晓东,python,笔记,博客,杨晓东个人导航,Victor,Victor's Blog,aggregator,index,homepage,start,开始界面,网站聚合,主页,网址大全,网址导航">
@@ -24,6 +25,9 @@
 		
 		<!-- Google 广告 -->
 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7780137864654456" crossorigin="anonymous"></script>
+		
+
+		
 		<!--link external resources-->
 		<link rel="stylesheet" href="static/css/sou.css">
 		<link id="daily-theme" rel="stylesheet" href="static/css/sou.css"
@@ -145,14 +149,7 @@
 									<a rel="nofollow" href="https://mail.google.com/mail/u/0/#inbox" target="_blank">
 										<i class="iconfont icon-gmail" style="color: #f03;"></i>Gmail</a>
 								</li>
-								<li>
-									<a rel="nofollow" href="https://outlook.live.com/mail/" target="_blank">
-										<i class="iconfont icon-windows" style="color: #03ff13;"></i>Hotmail</a>
-								</li>
-								<li>
-									<a rel="nofollow" href="https://exmail.qq.com" target="_blank">
-										<i class="iconfont icon-QQ" style="color: #03ff13;"></i>腾讯企业邮</a>
-								</li>
+								
 								<li>
 									<a rel="nofollow" href="https://mail.163.com/" target="_blank">
 										<i class="iconfont icon-wangyi" style="color: #03ff13;"></i>网易邮箱</a>
@@ -165,6 +162,27 @@
 									<a rel="nofollow" href="https://qiye.aliyun.com/" target="_blank">
 										<i class="iconfont icon-yunyouxiang" style="color: #f15534;"></i>阿里邮箱</a>
 								</li>
+								<li>
+									<a rel="nofollow" href="./v/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i></i>国外站点</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="./file/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i></i>黑洞</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.google.com/adsense/new/u/0/pub-7780137864654456/sites/my-sites" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i></i>GA控制台</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://jinbao.pinduoduo.com/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i>多多进宝</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://user.51.la/i/product" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i>流量统计</a>
+								</li>
+								
 								<li>
 									<a rel="nofollow" href="https://www.3v.do/" target="_blank">
 										<i class="iconfont icon-theater-masks" style="color: #f100ed;"></i>三维主机</a>
@@ -721,6 +739,64 @@
 										<i class="iconfont icon-theater-masks"></i>banana</a>
 								</li>
 								<li>
+									<a rel="nofollow" href="http://www.4h44.com/index.php?e=index.login" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>YunLi</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://qudao.720sy.com/#/login?redirect=/&params={}" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>720GM</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.zzzmode.com/mytools/charles/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>Charles-P</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://codepen.io/" target="_blank">
+										<i class="iconfont icon-codepen"></i>Codepen</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.52pojie.cn/" target="_blank">
+										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>吾爱破解</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://segmentfault.com/" target="_blank">
+										<i class="iconfont icon-msg" style="color:#096;"></i>SF思否</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://cdnjs.com/" target="_blank">
+										<i class="iconfont icon-cdnjs" style="color: #e52;"></i>CdnJs</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://fontawesome.com/icons?d=gallery&m=free" target="_blank">
+										<i class="iconfont icon-font-awesome" style="color: #4af;"></i>Font A.</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://msdn.itellyou.cn/" target="_blank">
+										<i class="iconfont icon-windows" style="color: #48c;"></i>MSDN下载</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://dash.cloudflare.com/" target="_blank">
+										<i class="iconfont icon-cloudflare" style="color: #f37f20;"></i>C. flare</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://www.swiper.com.cn/" target="_blank">
+										<i class="iconfont icon-S" style="color:#065fe3;"></i>Swiper</a>
+								</li>
+								<!---广告栏占用位置....--->
+								<li class="title"><i class="iconfont icon-kongzhitai"></i>Dev</li>
+								<li>
+									<a rel="nofollow" href="http://www.w3school.com.cn/" target="_blank">
+										<i class="iconfont icon-h5" style="color:#c03;"></i>W3school</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://loseprivacy.cc/" target="_blank">
+										<i class="iconfont icon-github"></i>Github</a>
+								</li>
+								<li>
+									<a rel="nofollow" href="https://go.bananapro.club/" target="_blank">
+										<i class="iconfont icon-theater-masks"></i>banana</a>
+								</li>
+								<li>
 									<a rel="nofollow" href="https://www.zzzmode.com/mytools/charles/" target="_blank">
 										<i class="iconfont icon-theater-masks" style="color:#f03;"></i>Charles-P</a>
 								</li>
@@ -1050,19 +1126,31 @@
 									哔哩哔哩
 								</a>
 							</li>
-							<li class="quick" data-s="法律法规" target="_blank" title="哔哩哔哩">
+							<li class="quick" data-s="法律法规" target="_blank" title="法律法规">
 								<a target=_blank rel="nofollow" href="./falv/index.html">
 									<i style="background-image: url(./static/icon/falv.png);"></i>
 									法律法规
 								</a>
 							</li>
-							<li class="quick" data-s="广告收入" target="_blank" title="哔哩哔哩">
+							<li class="quick" data-s="广告收入" target="_blank" title="广告收入">
 								<a target=_blank rel="nofollow" href="./gg/">
 									<i style="background-image: url(./static/icon/sao.png);"></i>
 									广告收入
 								</a>
 							</li>
-							<li class="quick" data-s="m3u8在线播放" target="_blank" title="哔哩哔哩">
+							<li class="quick" data-s="服务器" target="_blank" title="服务器">
+								<a target=_blank rel="nofollow" href="./servers/">
+									<i style="background-image: url(./static/icon/servers.png);"></i>
+									服务器
+								</a>
+							</li>
+							<li class="quick" data-s="薅羊毛" target="_blank" title="薅羊毛">
+								<a target=_blank rel="nofollow" href="./shangpin/">
+									<i style="background-image: url(./static/icon/yang.png);"></i>
+									薅羊毛
+								</a>
+							</li>
+							<li class="quick" data-s="m3u8在线播放" target="_blank" title="m3u8在线播放">
 								<a target=_blank rel="nofollow" href="http://demo443.com/m3u8/">
 									<i style="background-image: url(./static/icon/m3u8.png);"></i>
 									m3u8在线播放
@@ -1111,7 +1199,7 @@
 				<!--今日诗词 placeholder end-->
 			</div>
 			<div class="foot">
-				Copyright © 2022 ☕杨晓东_个人导航 All Rights Reserved. designed and developed by yangkaiqun.
+				Copyright 2020-2023 ☕杨晓东_个人导航 All Rights Reserved. designed and developed by yangkaiqun.
 				<p>
 					<pss><a href='http://demo443.com' target='_blank'> </a>&nbsp;&nbsp;<ping></ping>
 					</pss>
