--- a/falv/index.html
+++ b/falv/index.html
@@ -2,6 +2,13 @@
 <html>
 	<head>
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		
+		
+		<!-- Google 广告 -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7780137864654456" crossorigin="anonymous"></script>
+		
+		
+		
 		<style>
 			body {
 				transition: opacity ease-in 0.2s;
@@ -31,7 +38,7 @@
 				<div class="rich_media_area_primary_inner">
 					<div id="img-content" class="rich_media_wrp">
 						<h1 class="rich_media_title " id="activity-name" style="text-align:center;">
-							中华人民共和国法律法规大全（收藏）
+							中华人民共和国法律法规（收藏）
 						</h1>
 						<div class="rich_media_content js_underline_content             autoTypeSetting24psection"
 							id="js_content" style="visibility: visible;">
