--- a/m3u8/index.html
+++ b/m3u8/index.html
@@ -9,6 +9,12 @@
 		<link rel="shortcut icon" href="./favicon.ico">
 		<meta http-equiv="Cache-Control" content="no-siteapp">
 		<title>M3U8在线播放器</title>
+		
+		
+		<!-- Google 广告 -->
+		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7780137864654456" crossorigin="anonymous"></script>
+		
+		
 		<meta name="keywords" content="M3U8在线播放,M3U8播放器,M3U8直播源,M3U8在线测试">
 		<meta name="description" content="M3U8在线播放器">
 		<link rel="stylesheet" type="text/css" href="./css_js/main.css">
