--- a/file/index.html
+++ b/file/index.html
@@ -7,6 +7,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>黑洞</title>
 	<link rel="icon" href="./favicon.ico" sizes="192x192" />
+	
+	<!-- Google 广告 -->
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7780137864654456" crossorigin="anonymous"></script>
+	
+	
+	
     <link rel="stylesheet" href="./layui/css/layui.css">
     <style>
         .upload_div {
