--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>404页面-sorry-找不到这个页面</title>
+<title>纯css3创意正方形翻滚404特效 - 站长素材</title>
 
 <style>
 body {
