--- a/m3u8/index.html
+++ b/m3u8/index.html
@@ -11,10 +11,6 @@
 		<title>M3U8在线播放器</title>
 		
 		
-		<!-- Google 广告 -->
-		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7780137864654456" crossorigin="anonymous"></script>
-		
-		
 		<meta name="keywords" content="M3U8在线播放,M3U8播放器,M3U8直播源,M3U8在线测试">
 		<meta name="description" content="M3U8在线播放器">
 		<link rel="stylesheet" type="text/css" href="./css_js/main.css">
@@ -739,7 +735,7 @@
 		<footer>
 			<div class="am-container">
 				<p><span class="intro-siteinfo">♪(^∇^*) 一言加载中...</span><br>
-					资源来源于网络，如有侵权，请联系本人予以删除！
+					资源来源于网络，如有侵权，请联系本人予以删除！QQ：3458888444
 					<br>
 					© 2020 - 2023
 				</p>
